--- a/css/style.css
+++ b/css/style.css
@@ -658,7 +658,7 @@ header {
 .introducao {
   width: 100%;
   height: 380px;
-  background: url(../img/bg.jpg) no-repeat center;
+  background: url(../img/bg.jpg);
   background-size: cover;
   margin-top: 92px;
   text-align: center;
